@startuml Attendance System

class Attendance {
  - id: int
  - studentId: int
  - clubId: int
  - markedById: int
  - sessionDate: LocalDate
  - sessionTime: LocalTime
  - status: String
  - notes: String
  - studentName: String
  - markerName: String
  + Attendance()
  + Attendance(studentId: int, clubId: int, markedById: int)
  + getId(): int
  + getStudentId(): int
  + getClubId(): int
  + getStatus(): String
  + setStatus(status: String): void
  + setNotes(notes: String): void
  + isPresent(): boolean
}

class User {
  - id: int
  - username: String
  - fullName: String
  - assignedClubId: Integer
  + User()
  + getId(): int
  + getUsername(): String
  + getFullName(): String
  + getAssignedClubId(): Integer
}

class Club {
  - id: int
  - name: String
  + Club()
  + Club(name: String)
  + getId(): int
  + getName(): String
  + setName(name: String): void
}

class AttendanceService {
  - attendanceDAO: AttendanceDAO
  + AttendanceService()
  + markAttendance(studentId: int, clubId: int, status: String): boolean
  + getAttendanceByStudent(studentId: int): List
  + getAttendanceByClub(clubId: int): List
  + updateAttendance(id: int, status: String): boolean
}

Attendance "many" o-- "1" Club : many-to-one
Attendance "many" o-- "1" User : many-to-one
AttendanceService --> Attendance : uses

@enduml
